--- a/package.json
+++ b/package.json
@@ -10,10 +10,12 @@
   },
   "devDependencies": {
     "@sveltejs/vite-plugin-svelte": "^2.4.2",
-    "svelte": "^4.0.5",
+    "@types/luxon": "^3.3.3",
+    "svelte": "3.59.2",
     "vite": "^4.4.5"
   },
   "dependencies": {
+    "luxon": "^3.4.3",
     "svelte-navigator": "^3.2.2"
   }
 }
